[package]
name = "capctl"
version = "0.1.0"
edition = "2018"

description = "A pure-Rust interface to prctl() and Linux capabilities."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::linux-apis"]
keywords = ["prctl", "capabilities"]
repository = "https://github.com/cptpcrd/capctl"

[features]
default = []

[dependencies]
libc = "0.2"
bitflags = "1.2"

serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0"
