[package]
name = "capctl"
version = "0.2.0"
edition = "2018"

description = "A pure-Rust interface to prctl() and Linux capabilities."
readme = "README.md"
authors = ["cptpcrd"]
license = "MIT"
categories = ["os::linux-apis"]
keywords = ["prctl", "capabilities"]
repository = "https://github.com/cptpcrd/capctl"

[features]
default = ["std"]

std = []

[dependencies]
libc = { version = "0.2", default-features = false }
cfg-if = "0.1"
bitflags = "1.2"

serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

sc = { version = "0.2", optional = true }

[dev-dependencies]
serde_test = "1.0"

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "docsrs"]
